# PythonCourse2025

./: ._config.yml.bak  ._toc.yml.bak  README.md  _toc.yml  example_projects.md  myst.yml  projects.md
.github/workflows/: renderbook.yml
03 - OOP/: 03 - OOP.ipynb  example3.py
04 - Functional Programming/: 04 - Functional Programming.ipynb
05 - Data Structures and Oddities/: 05 - Data Structures and Oddities.ipynb
12 - Modules/: 12 - Modules.ipynb
12 - Modules/example-packaged-project/: pyproject.toml
14 - Testing/: 14 - Testing.ipynb
15 - Web programming/: 15 - Web programming.ipynb
15 - Web programming/examples/: config_example.py  dev.conf  protected_login_page.py  simple_app.py  simple_templates.py
15 - Web programming/real_example/: main.py  pyproject.toml
homeworks/: README.md
homeworks/homework1/: README.md  tests_public.py
homeworks/homework2/: README.md  test_api.py  test_functional_public.py  test_unit_public.py
homeworks/homework3/: README.md  main.py  pygrader_config_public_local.json  pygrader_config_public_web.json  pygrader_structure.json
project-topics/: README.md  pygrader.md
project-topics/ai-ml-data_science/: 26 - Trading.md  27 - Machine learning.md  27-trading.md  28 - RAG.md  28-machine-learning.md  29 - Agents.md  (+2 more)
workshop1/: README.md  cipher.py
workshops/: .gitignore
workshops/workshop2/solution-simpler/: README.md  cli.py  gui.py  pyproject.toml
workshops/workshop2/solution-simpler/src/raincheck_simpler/: client.py  models.py  services.py
workshops/workshop2/solution-simpler/tests/: test_services.py
(+73 files in other folders)
